Fixed spacing between share buttons.

--- a/newsroom/static/newsroom/css/newsroom_styles.css
+++ b/newsroom/static/newsroom/css/newsroom_styles.css
@@ -327,7 +327,7 @@ span.social-media-follow {
 }
 
 #sharing img, #sharing i  {
-    margin-left: 22px;
+    margin-left: 18px;
 }
 
 /* Letter writing */
